--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <nav class="navbar navbar-expand-lg  navbar-light header-nav d-flex">
               <div class="logo-wrap">
                 <a class="navbar-brand" href="index.html">
-                  <img src="assets/images/logo.png"  style="width: 200px; height: 200px;"    class="main-logo" alt="Maha Logo">
+<h2>webseit mit wordpress</h2> 
                 </a>
                 <div class="mobile-nav">
                   <button class="menu-toggler" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar"
